--- a/app/globals.css
+++ b/app/globals.css
@@ -94,10 +94,14 @@ ul {
 }
 
 #form-errors {
+  text-align: center;
   list-style: none;
-  margin: 0;
+  margin: 0.3rem auto;
   padding: 0;
   color: #a21d4c;
+  display: grid;
+  place-content: center;
+  gap: 1rem;
 }
 
 #auth-header {
